--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.10.4",
     "pinia": "^3.0.3",
     "vue": "^3.5.17"
   },
